--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<h2>Форма за Резервация</h2>
 					<p></p>
 				</div>
-				<form class="reservation_form row" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+				<form name="contact" class="reservation_form row" method="post" data-netlify="true" id="contactForm">
 					<div class="form-group col-lg-12">
 						<input type="text" class="form-control" id="name" name="name" placeholder="Имена">
 					</div>
