Finished changes to Responsive design

--- a/accomodation.html
+++ b/accomodation.html
@@ -38,8 +38,8 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item active"><a class="nav-link" href="accomodation.html">Събития</a></li>
+							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="nav-link" href="accomodation.html">Събития</a></li>
 							<li class="nav-item"><a class="nav-link" href="gallery.html">Галерия</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Контакти</a></li>
 						</ul>
@@ -133,7 +133,7 @@
 					</div>
 					<div class="timer__section hours">
 						<div class="timer__number"></div>
-						<div class="timer__label">Часове</div>
+						<div class="timer__label">Часа</div>
 					</div>
 					<div class="timer__section minutes">
 						<div class="timer__number"></div>
