--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="accomodation.html">Събития</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="accomodation.html">Събития</a></li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">Галерия</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакти</a></li>
                         </ul>
@@ -122,7 +122,6 @@
             <div class="footer_inner p_120">
                 <ul class="list f_menu">
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./our-story.html">Нашата История</a></li>
                     <li><a href="./accomodation.html">Събития</a></li>
                     <li><a href="./gallery.html">Галерия</a></li>
                     <li><a href="./contact.html">Контакти</a></li>
