--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 				<div class="container box_1620">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
@@ -96,7 +102,7 @@
 					</div>
 					<div class="timer__section hours">
 						<div class="timer__number"></div>
-						<div class="timer__label">Часове</div>
+						<div class="timer__label">Часа</div>
 					</div>
 					<div class="timer__section minutes">
 						<div class="timer__number"></div>
